[package]
name = "luau-src"
version = "0.2.0"
edition = "2021"
build = "build.rs"
description = "Luau source code bindings"
license = "MIT"

[lib]
crate-type = ["lib"]

[dependencies]
cxx = "1.0.51"
autocxx = { path = "vendor/autocxx", version = "0.13.0" }
thiserror = "1.0.30"

[build-dependencies]
walkdir = "2.3.2"
bindgen = "0.59.1"
cc = "1.0.71"
autocxx-build = { path = "vendor/autocxx/gen/build", version = "0.13.0" }

[features]
default = ["wrapper"]
wrapper = [] # Safe wrappers for bindings. Can disable this if you want to try and layer something over this like hlua
no-link = []