[package]
name = "luau-src"
version = "0.3.1"
edition = "2021"
build = "build.rs"
description = "Luau source code bindings"
license = "MIT"

[lib]
crate-type = ["lib"]

[build-dependencies]
bindgen = "0.59.1"
cc = { version = "1.0.71", optional = true }

[features]
default = ["link"]

# Link / Compile Luau. This is enabled by default.
link = ["cc"]